# wasm-emscripten-template

./: .gitignore  LICENSE  README.md  package.json  tsconfig.json
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/bridge/: CMakeLists.txt  bridge.cpp  library.js  post.js  pre.js
src/: index.ts
